minor addition to property files

--- a/jpf.properties
+++ b/jpf.properties
@@ -40,6 +40,7 @@ spf-lissa.native_classpath =\
 
 #--- project specific JPF classpath (used by JPF to load system-under-test classes)
 spf-lissa.classpath =\
+   ${spf-lissa}/build/spf-lissa-classes.jar;\
    ${spf-lissa}/build/examples
 
 #--- where are the classes for the JPF regression tests (used by host VM and JPF)
