some changes, still not working

--- a/jpf.properties
+++ b/jpf.properties
@@ -49,6 +49,9 @@ spf-lissa.test_classpath =\
 
 #--- project specific JPF sourcepath (used by JPF to locate sources for system-under-test classes)
 spf-lissa.sourcepath =\
-   ${spf-lissa}/src/examples
+   ${spf-lissa}/src/examples;\
+   ${spf-lissa}/build/spf-lissa.jar
 
 #--- other project specific options go here (e.g. 'vm.insn_factory.class' or 'peer_packages')
+jvm.insn_factory.class=lissa.HeapSolvingInstructionFactory
+#vm.insn_factory.class=lissa.HeapSolvingInstructionFactory
