problem found, it breaks when creating solver instance

--- a/jpf.properties
+++ b/jpf.properties
@@ -35,6 +35,8 @@ spf-lissa = ${config_path}
 # since both do not support wildcard patterns in classpath specs
 spf-lissa.native_classpath =\
    ${spf-lissa}/build/spf-lissa.jar;\
+   ${spf-lissa}/lib/symsolve.jar ;\
+   ${spf-lissa}/lib/commons-lang3-3.12.0.jar;\
    ${spf-lissa}/lib/*.jar
 
 
@@ -53,5 +55,13 @@ spf-lissa.sourcepath =\
    ${spf-lissa}/build/spf-lissa.jar
 
 #--- other project specific options go here (e.g. 'vm.insn_factory.class' or 'peer_packages')
+
+jpf-symbc.peer_packages = lissa
+
 jvm.insn_factory.class=lissa.HeapSolvingInstructionFactory
-#vm.insn_factory.class=lissa.HeapSolvingInstructionFactory
+
+# no state matching
+vm.storage.class=nil
+
+
+
