--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="tools/RunTest.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jpf-core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/jpf-symbc"/>
+	<classpathentry kind="lib" path="lib/javassist-3.27.0-GA.jar"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
