added jar to native classpath

--- a/jpf.properties
+++ b/jpf.properties
@@ -13,7 +13,8 @@ spf-lissa = ${config_path}
 spf-lissa.native_classpath =\
    ${spf-lissa}/build/spf-lissa.jar;\
    ${spf-lissa}/lib/symsolve.jar ;\
-   ${spf-lissa}/lib/commons-lang3-3.12.0.jar
+   ${spf-lissa}/lib/commons-lang3-3.12.0.jar;\
+   ${spf-lissa}/lib/javassist-3.27.0-GA.jar
 
 
 #--- project specific JPF classpath (used by JPF to load system-under-test classes)
