--- a/build.xml
+++ b/build.xml
@@ -44,14 +44,14 @@
 	local props have to come first, because Ant properties are immutable
 	NOTE: this file is local - it is never in the repository!
   -->
-<property file="local.properties"/>
+  <property file="local.properties"/>
+  <property environment="env"/>
 
-  <!-- if Ant was invoked by RunAnt.jar, 'jpf.site' will be set to the proper site.properties location -->
-  <property file="${jpf.site}"/>
-
-  <!-- otherwise we use the parent dir and the global ~/.jpf as fallback -->
-  <property file="../site.properties"/>  
+  <!-- this is where we get the 'jpf.core' location from -->
   <property file="${user.home}/.jpf/site.properties"/>
+
+  <!-- if there is none, default to a 'jpf-core' peer dir -->
+  <property name="jpf-core" value = "../jpf-core"/>
 
   <fail unless="jpf-core">no jpf-core location set, check site.properties</fail>
 
